Removed set's from entities, added toBuilder to entities